--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ APP_URL='http://localhost/proyectomejora'
 DB_USER="root"
 DB_NAME="tesis"
 DB_HOST="localhost"
-DB_PASSWORD=""
+DB_PASSWORD="ljnadv!#!IMG3012"
