--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 APP_URL='http://localhost/proyectomejora'
 
 DB_USER="root"
-DB_NAME="tesito"
+DB_NAME="tesis"
 DB_HOST="localhost"
 DB_PASSWORD="ljnadv!#!IMG3012"
